fixing issue where there was no spacing below intro wide region

--- a/themes/cusimple/scss/simple-styles.scss
+++ b/themes/cusimple/scss/simple-styles.scss
@@ -27,6 +27,10 @@ body {
   //margin:0 40px;
   background-color: #333;
 }
+#intro-wide-wrapper {
+  background: #fff;
+  padding-bottom: 20px;
+}
 #main {
   padding-top: 0;
 }
